--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -22,3 +22,23 @@
         color: #fff;
     }
 }
+
+%btn-fill {
+    padding: 15px 30px;
+    display: inline-block;
+    background: #3465A6;
+    border: none;
+    text-decoration: none;
+    color: #fff;
+    font-size: 14px;
+    line-height: 130%;
+    font-weight: 500;
+    letter-spacing: -0.03em;
+    transition: .3s all;
+    &:hover {
+        background: #4379C0;
+    }
+    &:focus {
+        background: #275086;
+    }
+}
