--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -1,5 +1,156 @@
 <footer class="footer">
-
+    <div class="container">
+        <div class="footer__header">
+            <a href="/" class="footer__logo">
+                <svg width="130" height="18" viewBox="0 0 130 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.808 14.912V17H0.616V0.199999H12.472V2.288H3.016V7.448H11.44V9.488H3.016V14.912H12.808ZM27.5209 8.288C28.6569 8.56 29.5129 9.048 30.0889 9.752C30.6809 10.44 30.9769 11.328 30.9769 12.416C30.9769 13.872 30.4409 15 29.3689 15.8C28.3129 16.6 26.7689 17 24.7369 17H17.0569V0.199999H24.2809C26.1209 0.199999 27.5529 0.575999 28.5769 1.328C29.6169 2.064 30.1369 3.128 30.1369 4.52C30.1369 5.432 29.9049 6.208 29.4409 6.848C28.9929 7.488 28.3529 7.968 27.5209 8.288ZM19.4329 7.592H24.1129C25.2809 7.592 26.1689 7.36 26.7769 6.896C27.4009 6.432 27.7129 5.752 27.7129 4.856C27.7129 3.96 27.4009 3.28 26.7769 2.816C26.1529 2.336 25.2649 2.096 24.1129 2.096H19.4329V7.592ZM24.6889 15.104C27.2649 15.104 28.5529 14.144 28.5529 12.224C28.5529 11.264 28.2249 10.56 27.5689 10.112C26.9289 9.648 25.9689 9.416 24.6889 9.416H19.4329V15.104H24.6889ZM42.0186 0.199999C44.1946 0.199999 45.9066 0.719999 47.1546 1.76C48.4026 2.8 49.0266 4.232 49.0266 6.056C49.0266 7.88 48.4026 9.312 47.1546 10.352C45.9066 11.392 44.1946 11.912 42.0186 11.912H37.8666V17H35.4666V0.199999H42.0186ZM41.9466 9.824C43.4666 9.824 44.6266 9.504 45.4266 8.864C46.2266 8.208 46.6266 7.272 46.6266 6.056C46.6266 4.84 46.2266 3.912 45.4266 3.272C44.6266 2.616 43.4666 2.288 41.9466 2.288H37.8666V9.824H41.9466ZM60.6394 17.192C58.9434 17.192 57.4154 16.824 56.0554 16.088C54.6954 15.336 53.6234 14.304 52.8394 12.992C52.0714 11.68 51.6874 10.216 51.6874 8.6C51.6874 6.984 52.0714 5.52 52.8394 4.208C53.6234 2.896 54.6954 1.872 56.0554 1.136C57.4154 0.384 58.9434 0.0079999 60.6394 0.0079999C62.3194 0.0079999 63.8394 0.384 65.1994 1.136C66.5594 1.872 67.6234 2.896 68.3914 4.208C69.1594 5.504 69.5434 6.968 69.5434 8.6C69.5434 10.232 69.1594 11.704 68.3914 13.016C67.6234 14.312 66.5594 15.336 65.1994 16.088C63.8394 16.824 62.3194 17.192 60.6394 17.192ZM60.6394 15.056C61.8714 15.056 62.9754 14.776 63.9514 14.216C64.9434 13.656 65.7194 12.888 66.2794 11.912C66.8554 10.92 67.1434 9.816 67.1434 8.6C67.1434 7.384 66.8554 6.288 66.2794 5.312C65.7194 4.32 64.9434 3.544 63.9514 2.984C62.9754 2.424 61.8714 2.144 60.6394 2.144C59.4074 2.144 58.2874 2.424 57.2794 2.984C56.2874 3.544 55.5034 4.32 54.9274 5.312C54.3674 6.288 54.0874 7.384 54.0874 8.6C54.0874 9.816 54.3674 10.92 54.9274 11.912C55.5034 12.888 56.2874 13.656 57.2794 14.216C58.2874 14.776 59.4074 15.056 60.6394 15.056ZM79.7592 9.608H76.2552V17H73.9032V0.199999H76.2552V7.496H79.8072L85.0872 0.199999H87.6552L81.6552 8.336L87.9432 17H85.2072L79.7592 9.608ZM98.3963 17.192C96.7003 17.192 95.1723 16.824 93.8123 16.088C92.4523 15.336 91.3803 14.304 90.5963 12.992C89.8283 11.68 89.4443 10.216 89.4443 8.6C89.4443 6.984 89.8283 5.52 90.5963 4.208C91.3803 2.896 92.4523 1.872 93.8123 1.136C95.1723 0.384 96.7003 0.0079999 98.3963 0.0079999C100.076 0.0079999 101.596 0.384 102.956 1.136C104.316 1.872 105.38 2.896 106.148 4.208C106.916 5.504 107.3 6.968 107.3 8.6C107.3 10.232 106.916 11.704 106.148 13.016C105.38 14.312 104.316 15.336 102.956 16.088C101.596 16.824 100.076 17.192 98.3963 17.192ZM98.3963 15.056C99.6283 15.056 100.732 14.776 101.708 14.216C102.7 13.656 103.476 12.888 104.036 11.912C104.612 10.92 104.9 9.816 104.9 8.6C104.9 7.384 104.612 6.288 104.036 5.312C103.476 4.32 102.7 3.544 101.708 2.984C100.732 2.424 99.6283 2.144 98.3963 2.144C97.1643 2.144 96.0443 2.424 95.0363 2.984C94.0443 3.544 93.2603 4.32 92.6843 5.312C92.1243 6.288 91.8443 7.384 91.8443 8.6C91.8443 9.816 92.1243 10.92 92.6843 11.912C93.2603 12.888 94.0443 13.656 95.0363 14.216C96.0443 14.776 97.1643 15.056 98.3963 15.056ZM127.236 17L127.212 4.76L121.14 14.96H120.036L113.964 4.832V17H111.66V0.199999H113.628L120.636 12.008L127.548 0.199999H129.516L129.54 17H127.236Z" fill="white"/>
+                </svg>                
+            </a>
+            <form action="" class="footer__subscribe">
+                <div class="footer__subscribe-txt">
+                    Подписывайтесь на нашу рассылку
+                </div>
+                <div class="footer__subscribe-formgroup">
+                    <input type="email" class="footer__subscribe-input" placeholder="Email">
+                    <button class="footer__subscribe-submit">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 1L7.29999 8.7" stroke="#3465A6" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M15 1L10.1 15L7.3 8.7L1 5.9L15 1Z" stroke="#3465A6" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                        
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="footer__row">
+            <div class="footer__contacts">
+                <div class="footer__contacts-item">
+                    <div class="footer__contacts-icon">
+                        <i>
+                            <svg width="12" height="17" viewBox="0 0 12 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6 0C2.69166 0 0 2.54213 0 5.66668C0 6.60467 0.248308 7.53469 0.72035 8.35958L5.67189 16.8174C5.73781 16.9301 5.86342 17 6 17C6.13658 17 6.2622 16.9301 6.32811 16.8174L11.2815 8.35679C11.7517 7.53469 12 6.60463 12 5.66664C12 2.54213 9.30834 0 6 0ZM6 8.5C4.34583 8.5 3.00002 7.22895 3.00002 5.66668C3.00002 4.1044 4.34583 2.83336 6 2.83336C7.65417 2.83336 8.99998 4.1044 8.99998 5.66668C8.99998 7.22895 7.65417 8.5 6 8.5Z" fill="white"/>
+                            </svg>
+                        </i>                            
+                    </div>
+                    <div class="footer__contacts-content">
+                        <div class="footer__contacts-info">
+                            г. Москва, ул. красная, 15
+                        </div>
+                        <!-- <div class="footer__contacts-title">
+                            Электронная почта
+                        </div> -->
+                    </div>
+                </div>
+                <div class="footer__contacts-item">
+                    <div class="footer__contacts-icon">
+                        <i>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_325_1434)">
+                                <path d="M19.0732 7.66089L14.706 12L19.0732 16.3391C19.1522 16.1741 19.2001 15.9917 19.2001 15.7969V8.20311C19.2001 8.00829 19.1522 7.8259 19.0732 7.66089Z" fill="white"/>
+                                <path d="M17.9345 6.9375H6.06578C5.87096 6.9375 5.68857 6.9854 5.52356 7.06434L11.1053 12.618C11.5989 13.1115 12.4014 13.1115 12.895 12.618L18.4768 7.06434C18.3117 6.9854 18.1294 6.9375 17.9345 6.9375Z" fill="white"/>
+                                <path d="M4.92683 7.66089C4.84788 7.8259 4.79999 8.00829 4.79999 8.20311V15.7969C4.79999 15.9917 4.84788 16.1741 4.92683 16.3391L9.29405 12L4.92683 7.66089Z" fill="white"/>
+                                <path d="M14.1095 12.5967L13.4915 13.2147C12.6692 14.037 11.3311 14.037 10.5087 13.2147L9.89078 12.5967L5.52356 16.9358C5.68857 17.0147 5.87096 17.0626 6.06578 17.0626H17.9345C18.1294 17.0626 18.3117 17.0147 18.4768 16.9358L14.1095 12.5967Z" fill="white"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_325_1434">
+                                <rect width="14.4" height="14.4" fill="white" transform="translate(4.79999 4.80005)"/>
+                                </clipPath>
+                                </defs>
+                            </svg>   
+                        </i>                                                  
+                    </div>
+                    <div class="footer__contacts-content">
+                        <a href="mailto: TEST@COMPANY.ru" class="footer__contacts-info footer__contacts-info_link">
+                            TEST@COMPANY.ru
+                        </a>
+                        <div class="footer__contacts-title">
+                            Электронная почта
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__contacts-item">
+                    <div class="footer__contacts-icon">
+                        <i>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_325_1429)">
+                                <path d="M18.8082 15.3682L16.7986 13.3586C16.0809 12.6409 14.8608 12.928 14.5738 13.861C14.3585 14.507 13.6407 14.8658 12.9948 14.7223C11.5594 14.3634 9.62162 12.4974 9.26277 10.9902C9.04746 10.3443 9.47808 9.62656 10.124 9.41128C11.057 9.1242 11.3441 7.90411 10.6264 7.1864L8.61684 5.17684C8.04268 4.67445 7.18144 4.67445 6.67905 5.17684L5.31542 6.54047C3.95179 7.97588 5.45896 11.7797 8.83215 15.1529C12.2053 18.5261 16.0092 20.1051 17.4446 18.6696L18.8082 17.306C19.3106 16.7318 19.3106 15.8706 18.8082 15.3682Z" fill="white"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_325_1429">
+                                <rect width="14.4" height="14.4" fill="white" transform="translate(4.79999 4.80005)"/>
+                                </clipPath>
+                                </defs>
+                            </svg> 
+                        </i>                                                      
+                    </div>
+                    <div class="footer__contacts-content">
+                        <a href="tel: 8 (988) 234-50-50" class="footer__contacts-info footer__contacts-info_link">
+                            8 (988) 234-50-50
+                        </a>
+                        <div class="footer__contacts-title">
+                            Генеральный директор
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ul class="footer__nav">
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">О компании</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">О компании</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+                <li class="footer__nav-item">
+                    <a href="" class="footer__nav-link">Доставка и оплата</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__politic">
+            <div class="footer__politic-we">
+                <i>
+                    <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11.0962 1.90381C9.86852 0.676127 8.23621 0 6.5 0C4.76379 0 3.1315 0.676102 1.90379 1.90379C0.676127 3.1315 0 4.76379 0 6.5C0 8.23621 0.676127 9.86852 1.90379 11.0962C3.1315 12.3239 4.76379 13 6.5 13C8.23621 13 9.8685 12.3239 11.0962 11.0962C12.3239 9.8685 13 8.23621 13 6.5C13 4.76379 12.3239 3.1315 11.0962 1.90381ZM6.5 12.2383C3.3359 12.2383 0.761719 9.6641 0.761719 6.5C0.761719 3.3359 3.3359 0.761719 6.5 0.761719C9.6641 0.761719 12.2383 3.3359 12.2383 6.5C12.2383 9.6641 9.6641 12.2383 6.5 12.2383Z" fill="white" fill-opacity="0.6"/>
+                        <path d="M9.44005 7.37488C9.24729 7.29061 9.02278 7.37862 8.93856 7.57138C8.51193 8.54781 7.54789 9.17871 6.48258 9.17871C5.00553 9.17871 3.80387 7.97705 3.80387 6.5C3.80387 5.02295 5.00553 3.82129 6.48258 3.82129C7.54175 3.82129 8.50355 4.44714 8.93283 5.41572C9.01806 5.60803 9.24302 5.69489 9.43533 5.6096C9.62764 5.52439 9.71445 5.2994 9.62921 5.1071C9.07796 3.86326 7.84283 3.05957 6.4826 3.05957C4.58554 3.05957 3.04218 4.60294 3.04218 6.5C3.04218 8.39706 4.58554 9.94043 6.4826 9.94043C7.85068 9.94043 9.0887 9.13024 9.63658 7.87638C9.7208 7.68363 9.63282 7.45911 9.44005 7.37488Z" fill="white" fill-opacity="0.6"/>
+                    </svg>                        
+                </i>
+                2021. ООО “ЕВРОКОМ”
+            </div>
+            <p class="footer__politic-txt">
+                <a href="" class="footer__politic-link">Пользовательское соглашение</a>
+                 и
+                 <a href="" class="footer__politic-link">политика конфеденциальности</a>
+            </p>
+        </div>
+    </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
